--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PassOrderCloneProject">
-        <activity android:name=".presentation.ui.singup.SignUpActivity"></activity>
+        <activity android:name=".presentation.ui.signup.SignUpActivity"></activity>
         <activity android:name=".presentation.ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
