최상위 프래그먼트 찾는 로직 구현

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 
     // Preferences Data Store
     implementation "androidx.datastore:datastore-preferences:1.0.0-alpha06"
+    androidTestImplementation 'androidx.test:rules:1.4.0-alpha04'
 
     def nav_version = "2.3.3"
 
